# Conversational-RAG-API

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/: bookings.py  chat.py
src/app/core/: embeddings.py  llm_client.py  rag.py  redis_memory.py
src/app/data/: README.md
src/app/models/: schemas.py
src/app/services/: booking_service.py
src/app/utils/: text.py
tests/: test_rag_similarity.py
